<resources>
    <string name="app_name">Podo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="pomodoro">Pomodoro</string>
    <string name="task">Task</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="pomodoro_round">1</string>
    <string name="title_task">Title Task</string>
    <string name="close_task">Close Task</string>
    <string name="time_interval_pomodoro">30 minute</string>
    <string name="pomodoro_time">25:00</string>
    <string name="start_to_focus">Start to focus</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="round_pomodoro">Round Pomodoro</string>
    <string name="start_pomodoro">Start Pomodoro</string>
    <string name="add_task">Add Task</string>
    <string name="all">All</string>
    <string name="done">Done</string>
    <string name="empty_text">No assignment yet</string>
    <string name="unfinished">Unfinished</string>
</resources>