<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/cb_pomodoro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:button="@drawable/cb_selector"
            android:minWidth="0dp"
            android:minHeight="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time_interval"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title_pomodoro" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/pomodoro_round"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time_interval"
            app:layout_constraintStart_toEndOf="@+id/tv_time_interval"
            app:layout_constraintTop_toTopOf="@+id/tv_time_interval"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_pomodoro"
            app:tint="@color/accent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/nunito"
            android:text="@string/pomodoro_round"
            android:textColor="@color/accent"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_title_pomodoro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/title_task"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/img_close"
            app:layout_constraintStart_toEndOf="@+id/cb_pomodoro"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/close_task"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time_interval"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title_pomodoro"
            app:srcCompat="@drawable/ic_close" />

        <TextView
            android:id="@+id/tv_time_interval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nunito"
            android:text="@string/time_interval_pomodoro"
            android:textColor="@color/light_grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_title_pomodoro"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_pomodoro" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>